fixed margins on mobile

--- a/src/components/editor-diff-viewer/style.css
+++ b/src/components/editor-diff-viewer/style.css
@@ -1,5 +1,5 @@
 .code-diff-container {
-  margin: 15px 0 0 40px;
+  margin: 15px 0 0 0;
 }
 
 /* Hide the answer code by default */
